ui/style/global.css
:root {
    --background-color-0: #0D1117;
    --background-color-1: #161B22;
    --accent-color-1: #FFA657;
    --accent-color-2: #ff8923;
    --text-color-1: #C9D1D9;
    --text-color-2: #888888;
    --link-color: #0099ff;

    --footer-height: 40px;
}

/* Containers */

html, body {
    width: 100vw;
    height: 100vh;

    margin: 0;
    padding: 0;

    display: flex;
    flex-direction: column;

    background-color: var(--background-color-0);
}

main {
    flex-grow: 1;
    padding-bottom: var(--footer-height);
}

header {
    border-bottom: 1px solid var(--background-color-1);
}

footer {
    width: 100%;
    max-height: var(--footer-height);
    
    position: sticky;
    bottom: 0;

    display: flex;
    justify-content: space-evenly;
    align-items: center;

    background-color: var(--background-color-0);
    border-top: 1px solid var(--background-color-1);
}

/* Elements */

p, span, h1, h2, h3, h4, h5, h6, button, label {
    color: var(--text-color-1);
    font-family: Helvetica, sans-serif;
}

a {
    color: var(--link-color);
    font-family: Helvetica, sans-serif;
    text-decoration: none;
}

/* Classes */

button, .link_button {
    padding: 5px;
    border: 1px solid var(--accent-color-1);
    border-radius: 10px;
    background-color: var(--background-color-1);
    color: var(--text-color-1);
    font-size: 0.9em;
    cursor: pointer;
}

button:hover, .link_button:hover {
    border: 1px solid var(--accent-color-2);
}

footer.menu a > img {
    cursor: pointer;
}

